fine tuning the calculation for available horizontal space by taking into account the typed value in the text input.  Also adding the gap value to the input text width to give it a bit more space to prevent the visible text from being concealed by overflow

--- a/packages/calcite-components/src/components/combobox/combobox.scss
+++ b/packages/calcite-components/src/components/combobox/combobox.scss
@@ -101,6 +101,7 @@
   line-height: var(--calcite-combobox-input-height);
   inline-size: 100%;
   margin-block-end: var(--calcite-combobox-item-spacing-unit-s);
+  min-inline-size: 4.8125rem;
   &:focus {
     @apply outline-none;
   }
